project(COMP428-A3)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES COMP428-A3-BCAST.c)

add_executable(COMP428-A3 ${SOURCE_FILES})

find_package(MPI REQUIRED)
set(CMAKE_CXX_COMPILE_FLAGS ${CMAKE_CXX_COMPILE_FLAGS} ${MPI_COMPILE_FLAGS})
set(CMAKE_CXX_LINK_FLAGS ${CMAKE_CXX_LINK_FLAGS} ${MPI_LINK_FLAGS})
include_directories(${MPI_INCLUDE_PATH})
target_link_libraries(COMP428-A3 ${MPI_LIBRARIES})